# blog-hsio

./: .gitignore  README.md  archives.html  authors.html  categories.html  index.html  linux-on-thinkpad-x280-intermittently-freezes-solved.html  mastodon-on-diet.html  pelicanconf.py  publishconf.py  putting-your-mastodon-on-a-diet.html  pyproject.toml  requirements.txt  tags.html
.github/workflows/: pelican.yml
author/: harshad-sharma.html
category/: linux.html  mastodon.html  self-hosted.html  troubleshooting.html
content/2023/07/: 04-mastodon-on-diet.md  linux-on-thinkpad-freezes.md  mastodon-on-diet.md
dot.github/workflows/: pelican.yml
feeds/: all.atom.xml  linux.atom.xml  mastodon.atom.xml  self-hosted.atom.xml  troubleshooting.atom.xml
output/: archives.html  authors.html  categories.html  index.html  mastodon-on-diet.html  tags.html
output/author/: harshad-sharma.html
output/category/: mastodon.html
posts/2023/Jul/03/linux-on-thinkpad-x280-intermittently-freezes-solved/: index.html
posts/2023/Jul/04/putting-your-mastodon-on-a-diet/: index.html
tag/: linux.html  mastodon.html  self-hosted.html  thinkpad.html
