[tool.poetry]
name = "blog-harshad-sharma-io"
version = "0.1.0"
description = ""
authors = ["Harshad Sharma <harshad@sharma.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.8.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
