[tool.poetry]
name = "blog-harshad-sharma-io"
version = "0.1.0"
description = ""
authors = ["Harshad Sharma <harshad@sharma.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.8.0"}
ghp-import = "^2.1.0"
invoke = "^2.1.3"
minchin-pelican-plugins-cname = "^1.2.1"
minchin-pelican-plugins-nojekyll = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
